<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">sportconnect</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_role">Role</string>
<string name="lbl_damir_begic">damir begic</string>
<string name="msg_international_h">International Handball Federation </string>
<string name="msg_confirm_passwor">Confirm password:</string>
<string name="lbl_teams">TEAMS</string>
<string name="lbl_damir">damir</string>
<string name="lbl_matches">Matches</string>
<string name="lbl_live">Live</string>
<string name="msg_manage_your_not2">Manage your notif</string>
<string name="lbl_date_of_birth">Date of Birth</string>
<string name="lbl_log_in">Log In</string>
<string name="msg_inter_milan_goe">Inter Milan goes into the UCL Finals</string>
<string name="lbl_ic">ic</string>
<string name="msg_tag_your_favori">Tag your favorite sports</string>
<string name="msg_what_is_your_ro">What is your role?</string>
<string name="lbl_id">ID</string>
<string name="lbl_coach">COACH</string>
<string name="lbl_teams2">Teams</string>
<string name="msg_summer_olympic">Summer Olympic Games in France</string>
<string name="lbl_notifications">Notifications</string>
<string name="lbl_sign_up">Sign Up</string>
<string name="lbl_popular_events">POPULAR EVENTS</string>
<string name="msg_forgot_password">Forgot Password?</string>
<string name="msg_following_match">Following matches</string>
<string name="lbl_damir_begi">damir begić</string>
<string name="lbl_profile">profile</string>
<string name="lbl_begic">begic</string>
<string name="msg_basketball">   BASKETBALL            SKIING                  TENNIS                      </string>
<string name="lbl_edit_profile">Edit Profile</string>
<string name="msg_please_wait_whi">Please wait while the profile is loading</string>
<string name="msg_football">FOOTBALL       VOLLEYBALL           HANDBALL</string>
<string name="msg_sarajevo_bosni">Sarajevo, Bosnia and Herzegovina</string>
<string name="lbl_fan2">Fan</string>
<string name="msg_uefa_euro_quali">UEFA EURO Qualifiers: Portugal -BiH</string>
<string name="msg_my_leagues_and">My Leagues and Cups</string>
<string name="msg_cortina_world_c">Cortina World Championship woman</string>
<string name="lbl_events2">Events</string>
<string name="lbl_player">PLAYER</string>
<string name="msg_search_by_value">Search by value or city</string>
<string name="msg_we_are_creating">We are creating    your profile...</string>
<string name="msg_french_open_202">French Open 2023 schedule</string>
<string name="lbl_setup">Setup</string>
<string name="lbl_events">EVENTS</string>
<string name="lbl_news">News</string>
<string name="msg_enter_email_or">Enter Email or Username:</string>
<string name="lbl_password">Password:</string>
<string name="lbl_settings">Settings</string>
<string name="lbl_or">OR</string>
<string name="lbl_fan">FAN</string>
<string name="lbl_ations">ations.</string>
<string name="lbl_my_teams">My Teams</string>
<string name="lbl_my_profile">My Profile</string>
<string name="lbl_your">your</string>
<string name="lbl_featured_events">Featured Events</string>
<string name="lbl_personal_data">PERSONAL DATA:</string>
<string name="msg_manage_your_not">Manage your notifications.</string>
</resources>
